# radar-ad-rmt-analysis

./: .gitattributes  .gitignore  README  README.md  Snakefile  pyproject.toml
config/: config.yaml  excluded_features.txt  lr.json  rf.json  sgl.json  shap_plot.json  xgb.json
r-analyses/: create-heatmap.R  univariate-analysis.R
snakemake_modules/: classification.snakefile  preprocessing.snakefile
src/: definitions.py  features.py
src/analysis/: clf.py
src/data/: process_merged.py
src/utils/: aggregate-shap-values.py  compile_table.py  merge_files.py  set_all_seeds.py
src/visualization/: generate-patchwork-plot.R  generate_boxplots.py  visualize-shap-values.py  visualize_clf_results.py
