[project]
authors = [
    { name = "Manuel Lentzen", email = "manuel.lentzen@scai.fraunhofer.de" },
]
dependencies = []
name = "src"
requires-python = "== 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
src = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = "==1.4.4"
r-tidyr = ">=1.3.1,<2"
r-reshape2 = ">=1.4.4,<2"
r-dplyr = ">=1.1.4,<2"
typer = ">=0.15.2,<0.16"
r-httpgd = ">=2.0.4,<3"
r-languageserver = ">=0.3.16,<0.4"
r-hmisc = ">=5.2_3,<6"
r-doparallel = ">=1.0.17,<2"
r-ggcorrplot = ">=0.1.4.1,<0.2"
r-argparse = ">=2.2.5,<3"
r-devtools = ">=2.4.5,<3"
r-bayesplot = ">=1.11.1,<2"
optuna = ">=4.2.1,<5"
scikit-learn = ">=1.6.1,<2"
shap = ">=0.47.0,<0.48"
ipykernel = ">=6.29.5,<7"
matplotlib = ">=3.10.1,<4"
r-ggplot2 = ">=3.5.1,<4"
r-patchwork = ">=1.3.0,<2"
r-jsonlite = ">=1.9.1,<2"
r-readr = ">=2.1.5,<3"
r-upsetr = ">=1.4.0,<2"
r-ggupset = ">=0.4.1,<0.5"
r-tidyverse = ">=2.0.0,<3"
r-rjson = ">=0.2.23,<0.3"
r-venn = ">=1.12,<2"
r-readxl = ">=1.4.5,<2"
seaborn = ">=0.13.2,<0.14"
snakemake = "==7.14.0"
tabulate = "==0.8.10"
xgboost = ">=2.1.4,<3"
openpyxl = ">=3.1.5,<4"
optuna-integration = ">=4.2.1,<5"
psycopg2 = ">=2.9.9,<3"
numpy = ">=1.26.4,<2"
plotnine = ">=0.10.1,<0.11"
mizani = "==0.8.1"
ruff = ">=0.11.1,<0.12"
r-ggpolypath = ">=0.3.0,<0.4"
vulture = ">=2.14,<3"
